--- a/localization/replace/laws_l_english.yml
+++ b/localization/replace/laws_l_english.yml
@@ -761,6 +761,8 @@ grain_laws_rom: "Leges Frumentariae"
  civic_foreign_inv_2_desc: "The primacy of our culture within our empire is what makes us great. The peoples under our administration must assimilate if they wish to get ahead."
  civic_foreign_inv_3: "Diverse Administration"
  civic_foreign_inv_3_desc: "Alexander the Great once stated that he prized meritocracy regardless of culture. Rather than limit the influence of our subjects, we should embrace their smartest and most capable and integrate them into our administration."
+ civic_amend_inv: "Right to Amend"
+ civic_amend_inv_desc: "Amending our constitution may be seen as heretical by some, but necessary by others as time moves forward. One can only hope we do not amend it into a dictatorship...."
  #martial
  martial_aux_inv: "Auxiliaries"
  martial_unit_inv: "Unit Cohesion"
@@ -769,16 +771,14 @@ grain_laws_rom: "Leges Frumentariae"
  greek_unit_inv_desc: "The phalanx is strong, but tactically inflexible. By integrating flexible auxiliaries in concert with the bulky phalanx, the army as a whole will be superior."
  martial_unit_inv_2: "Standardized Units"
  martial_unit_inv_2_desc: "As our empire grows, so does our army. To ease its management, a standardization of units is far more efficient than a vast diversity of specialized units."
- chinese_steel_inv: "Chinese Steel"
- chinese_steel_inv: "The Ancient Chinese peoples made steel by mixing cast iron and wrought iron, a method that was rediscovered in Europe in 1863 in Germany. During the Han period, most weapons were made of iron or steel."
- crossbow_inv: "Crossbow"
- crossbow_inv_desc: "The crossbow was developed in China with some evidence dating its use to 600 BC. By the Warring States period, the crossbow had been effectively integrated into the armies of china."
+ chinese_steel_inv: "Blast Furnace"
+ chinese_steel_inv_desc: "Although it was once thought the Chinese skipped the bloomery process, Chinese blast furnaces virtually replaced all evidence of them by the 5th century BC. The Ancient Chinese peoples made steel by mixing cast iron and wrought iron, a method that was rediscovered in Europe in 1863 in Germany. During the Han period, most weapons were made of iron or steel."
  base_defensive_inv: "City Fortifications"
  base_defensive_inv_desc: "Walls, ramparts, and more!"
  siege_engine_inv_1: "Siege Engines"
- siege_engine_inv_1_desc: ""
+ siege_engine_inv_1_desc: "Battering Rams, catapults, ladders, and towers. The more the merrier."
  siege_engine_inv_2: "Siege Catapults"
- siege_engine_inv_2_desc: ""
+ siege_engine_inv_2_desc: "Catapults have been used since the Bronze Age to differing effects, almost all of which for siege."
  siege_engine_inv_3: "Onagers"
  siege_engine_inv_3_desc: "The kick back from these Roman catapults gave the name meaning wild ass. Although there is little evidence of its origin in the 3rd century BC, it is known for its use by the Romans in the 4th century AD."
  siege_engine_inv_4: "Battering Ram"
@@ -790,16 +790,16 @@ grain_laws_rom: "Leges Frumentariae"
  armour_inv_3: "Stylized Helmets"
  armour_inv_3_desc: "Stylized helmets specific to our culture bring unifmority in our ranks and diverity compared to our enemies. It also looks cool."
  greek_helmet_inv_1: "Korinthian Helmet"
- greek_helmet_inv_1_desc: ""
+ greek_helmet_inv_1_desc: "The Corinthian helmet originated in ancient Greece and took its name from the city-state of Corinth. It was a helmet made of bronze which in its later styles covered the entire head and neck, with slits for the eyes and mouth. A large curved projection protected the nape of the neck. Out of combat, a Greek hoplite would wear the helmet tipped upward for comfort. This practice gave rise to a series of variant forms in Italy, where the slits were almost closed, since the helmet was no longer pulled over the face but worn cap-like. Although the classical Corinthian helmet fell out of use among the Greeks in favour of more open types, the Italo-Corinthian types remained in use until the 1st century AD, being used, among others, by the Roman army."
  greek_helmet_inv_2: "Attic Helmet"
- greek_helmet_inv_2_desc: ""
+ greek_helmet_inv_2_desc: "The Attic helmet was similar to the Chalcidian helmet but lacked a nose guard. Although in Greece itself its use was not as widespread as the Corinthian or Phrygian types, the Attic helmet became very popular in Italy, where most examples have been found. Many Italian peoples used variations of the attic helmet, but archaeologically it has been especially prominent in Samnite and Lucanian burials and their associated art."
  greek_helmet_inv_3: "Phrygian Helmet"
- greek_helmet_inv_3_desc: ""
+ greek_helmet_inv_3_desc: "The Phrygian helmet was worn by Macedonian cavalry in King Philip's day, but his son, Alexander, is said to have preferred the open-faced Boeotian helmet for his cavalry, as recommended by Xenophon. He did, however, suggest its use to his foot companions."
  greek_helmet_inv_4: "Boetian Helmet"
- greek_helmet_inv_4_desc: ""
+ greek_helmet_inv_4_desc: "The Boeotian helmet was modelled on the shape of a folded-down Boeotian variant of the petasos, a type of Greek sun hat, usually made of felt.[1] As an open helmet, it allowed good peripheral vision and unimpaired hearing. The Athenian military expert and author Xenophon particularly recommended the Boeotian helmet for cavalry, a piece of advice was taken up by Alexander the Great, who equipped his cavalry with this helmet."
  latin_helmet_inv_1: "Gaela Helmet"
- latin_helmet_inv_1_desc: ""
- indian_helmet_inv_1: "Śirāstrāṇa"
+ latin_helmet_inv_1_desc: "A Roman helmet, the exact form or design of the helmet varied significantly over time, between differing unit types, and also between individual examples – pre-industrial production was by hand – so it is not certain to what degree there was any standardization even under the Roman Empire."
+ indian_helmet_inv_1: "Sirastrana"
  indian_helmet_inv_1_desc: "Good luck pronouncing this one."
  chinese_helmet_inv_1: "Warring States Helmet"
  chinese_helmet_inv_1_desc: "The Zhou helmet was modified to resemble more of a cap made of iron that protected the face and still offered full visibility. It looked similar to the korinthian helmet."
@@ -817,8 +817,8 @@ grain_laws_rom: "Leges Frumentariae"
  latin_armour_inv_1_desc: "The Lorica hamata was a type of mail armor used by soldiers for over 600 years (3rd century BC to 4th century AD) from the Roman Republic to the Roman Empire. Lorica hamata comes from the Latin hamatus--hooked--as the rings hook into one another."
  latin_armour_inv_2: "Lorica Segmentata"
  latin_armour_inv_2_desc: "Despite the armor being commonly associated with the Romans, it was used by other civilizations before the Romans. The armor was originally used by the Parthians and possibly the Dacians, Scythians, or Sarmatians before the Romans used it. It was possibly introduced in the mid 1st Century BC and fell out of favor around the Crisis of the Third Century."
- indian_armour_inv_1: "Lohajālika Armour"
- indian_armour_inv_1_desc: "Lohajālika, a type of mail armor made from iron or steel, is renowned for its exceptional durability, lightweight nature, and strength. In ancient Indian armories, Lohajālika was prevalent due to its lightweight properties and resilience against a variety of attacks, particularly those from bladed weapons such as swords and axes."
+ indian_armour_inv_1: "Lohajalika Armour"
+ indian_armour_inv_1_desc: "Lohajalika, a type of mail armor made from iron or steel, is renowned for its exceptional durability, lightweight nature, and strength. In ancient Indian armories, Lohajālika was prevalent due to its lightweight properties and resilience against a variety of attacks, particularly those from bladed weapons such as swords and axes."
  indian_armour_inv_2: "Kavacha"
  indian_armour_inv_2_desc: "Kavacha was plate armor that covered the chest, torso and other parts of the body, providing protection to warriors. It was tightly fitted and made of metal or leather, offering defense in battle."
  greek_shield_inv_1: "Aspis"
@@ -833,9 +833,67 @@ grain_laws_rom: "Leges Frumentariae"
  chinese_shield_inv_1_desc: "One of the earliest known examples of a Chinese shield is the dao, which was a large, rectangular shield made of wood or leather. Dao shields were often used by infantry soldiers to protect themselves from arrows and other projectiles."
  chinese_shield_inv_2: "Hook Shield"
  chinese_shield_inv_2_desc: "During the Han dynasty, a hook shield was used in combination with a sword when fighting against polearms. The hook shield was a small iron shield that had hooks at the top and bottom for hooking halberds or spears. Sometimes it had a thorny protrusion in the middle for attacking."
- indian_shield_inv: ""
- indian_shield_inv_desc: ""
- 
+ crossbow_inv: "Crossbow"
+ jian_inv: "Jian"
+ pi_inv: "Pi"
+ ji_inv: "Ji"
+ dao_inv: "Dao Sword"
+ crossbow_inv_desc: "The Chinese crossbow (nu) was created around the 6th century BC and widely implemented in the Warring States period. Crossbowmen were highly praised and some states such as the Chu and Wei relied on them as elite warriors of unmatched stamina. Armour meant little to a bolt fired by a crossbow; it was the ultimate ranged weapon."
+ jian_inv_desc: "The jian is a double-edged straight sword used in China for the last 2,500 years. The first Chinese sources that mention the jian date to the 7th century BC during the Spring and Autumn period; one of the earliest specimens being the Sword of Goujian."
+ pi_inv_desc: "The pi was used from ancient times until the Han dynasty. It was essentially a short sword attached to a stick."
+ ji_inv_desc: "The ji was initially a hybrid between a spear and a dagger-axe. It was a relatively common infantry weapon in Ancient China, and was also used by cavalry and charioteers."
+ dao_inv_desc: "Originally less common as a military weapon than the jian – the straight, double-edged blade of China – the dao became popular with cavalry during the Han dynasty due to its sturdiness, superiority as a chopping weapon, and relative ease of use."
+ sarissa_inv: "Sarissa"
+ xyston_inv: "Xyston"
+ xiphos_inv: "Xiphos"
+ sarissa_inv_desc: "The sarissa was introduced by Philip II of Macedon and was used in his Macedonian phalanxes as a replacement for the earlier dory, which was considerably shorter. These longer spears improved the strength of the phalanx by extending the rows of overlapping weapons projecting towards the enemy. After the conquests of Alexander the Great, the sarissa was a mainstay during the Hellenistic era."
+ xyston_inv_desc: "The xyston was a type of a long thrusting spear made of cornel wood in ancient Greece. It measured about 3.5 to 4.25 meters long and was probably held by the cavalryman with both hands, although some evidence suggests that it could also be used single handed. It had a wooden shaft and a spear-point at both ends. Possible reasons for the secondary spear-tip were that it acted partly as a counterweight and also served as a backup in case the xyston was broken in action. The xyston is usually mentioned in context with the hetairoi, the cavalry forces of ancient Macedon. After Alexander the Great's death, the hetairoi were named xystophoroi because of their use of the xyston lance."
+ xiphos_inv_desc: "The xiphos was a double-edged, one-handed Iron Age straight shortsword used by the ancient Greeks. It was a secondary battlefield weapon for the Greek armies after the dory or javelin. The classic blade was generally about 45–60 cm long, although the Spartans supposedly preferred to use blades as short as 30 cm around the era of the Greco-Persian Wars."
+ gladius_inv: "Gladius"
+ spatha_inv: "Spatha"
+ pilum_inv: "Pilum"
+ verutum_inv: "Verutum"
+ pugio_inv: "Pugio"
+ falcata_inv: "Falcata"
+ soliferrum_inv: "Soliferrum"
+ gladius_inv_desc: "This iconic Roman sword found its origins in Iberia. The Roman prototype was called the Gladius Hispaniensis (duh) but would be refined over time culminating in the Pompeii Gladius (because modern historians found it in the ruins of Pompeii). According to Polybius, this sword was used by the Roman army during the Battle of Telamon in 225 BC and again at Cannae in 216 BC. It is believed that Scipio Africanus promoted the use throughout the Roman army. It was eventually replaced by the Spatha around 300 AD."
+ spatha_inv_desc: "The earlier gladius sword was gradually replaced by the spatha from the late 2nd to the 3rd century AD. From the early 3rd century, legionaries and cavalrymen began to wear their swords on the left side, perhaps because the scutum had been abandoned and the spatha had replaced the gladius."
+ pilum_inv_desc: "Another iconic Roman weapon, the pilum could be used as a javelin or spear. The standard legion of the late republic/ early empire legionary would carry two pila and throw one before charging an enemy with their gladius. It could also be held against cavalry charges, in which Julius Caesar decisively defeated Pompey Magnus at the Battle of Pharsalus by ordering his troops to use it as a thrusting spear rather than throwing it. It is believed that Gaius Marius replaced one of the shaft pieces with wood to make it unusable after it was launched, rendering it useless against counter attack, though evidence suggests it was not adopted for long. I'll let the nerds decided; some of them get really mad about it."
+ verutum_inv_desc: "A short javelin used by Velites and other light infantry. It was taken out of service along with the velites in the 2nd century BC but readopted in the late empire. I was surprised too; I thought they just used pila."
+ pugio_inv_desc: "A leaf-shaped dagger that would not be on the invention list if I wasn't going for some sort of consistency. They stayed in the Roman arsenal to its fall so that's kinda cool."
+ falcata_inv_desc: "The falcata is a type of sword typical of pre-Roman Iberia. The falcata was used to great effect for warfare in the ancient Iberian peninsula, and is firmly associated with the southern Iberian tribes, among other ancient peoples of Hispania. It was highly prized by the ancient general Hannibal, who equipped Carthaginian troops with it during the Second Punic War."
+ soliferrum_inv_desc: "Latin for only iron, this Iberian ranged pole weapon uused as a heavy javelin was--you guessed it--made entirely of iron. Heavy with a narrow, barbed tip, this javelin was highly effective."
+ tomora_inv: "Tomora"
+ howdah_inv: "Howdah"
+ urumi_inv: "Urumi Whip Sword"
+ chakram_inv: "Chakram"
+ khanda_inv: "Khanda"
+ tomora_inv_desc: " A special long lance, the tomara, was carried by infantry mounted on the backs of elephants and was used to counter any enemy infantry that had fought its way through the elephant’s infantry screen to attack the animal itself."
+ howdah_inv_desc: "A Howdah is a carriage which is positioned on the back of an elephant, or occasionally some other animal such as a camel, used most often in the past to carry wealthy people during progresses or processions, hunting or in warfare."
+ urumi_inv_desc: "The Urumi s a sword with a flexible, whip-like blade, originating in modern-day Kerala in the Indian subcontinent. It is thought to have existed from as early as the Sangam period."
+ chakram_inv_desc: "The chakram is primarily a throwing weapon, but can also be used hand-to-hand. A smaller variant called chakri is worn on the wrist."
+ khanda_inv_desc: "Used in the Mahjanapadas and Mauryan Dynasty, The blade broadens from the hilt to the point, which is usually quite blunt. While both edges are sharp, one side usually has a strengthening plate along most of its length, which both adds weight to downward cuts and allows the wielder to place their hand on the plated edge. The hilt has a large plate guard and a wide finger guard connected to the pommel. The pommel is round and flat with a spike projecting from its centre. The spike may be used offensively or as a grip when delivering a two-handed stroke."
+ illyrian_axe_inv: "Illyrian Axe"
+ sibyna_inv: "Sibyna"
+ sica_inv: "Sica"
+ illyrian_axe_inv_desc: "Surprise! Illyrians used axes. No cool name though :/"
+ sibyna_inv_desc: "The Illyrians used the thrusting spears and the sibyna, which resembled a boar spear. The sibyna was a long, metallic spear and is commonly found all over Illyria, but especially in the necropolis of Bosnia."
+ sica_inv_desc: "The main Illyrian fighting sword was the sica, a short single-edged curved sword used by the Thraex gladiators in the Roman world. The sica was developed during the Bronze Age and was similar to the Greek machaira. It was originally depicted as a curved sword with a blade about 16–18 inches (41–46 centimetres) long. The distinctive shape was designed to get around the sides of an opponent's shield in order to stab or slash him in the back. Although the sica was used by many peoples around the Balkans, the Romans regarded the sica as a distinctive Illyrian weapon."
+ spur_inv: "Spurs"
+ spur_inv_desc: "The spur was used by the Celts during the La Tène period, and is also mentioned by Xenophon. Iron or bronze spurs were also used throughout the Roman Empire.[5] The spur also existed in the medieval Arab world. Early spurs had a neck that ended in a point, called a prick, riveted to the heel band."
+ italic_pilum_scutum_inv: "Scutum"
+
+ #NAVAL
+ reinforced_planks_inv: "Reinforced Planks"
+ reinforced_planks_inv_desc: "Reinforcing ship planks allows us to mount rams and keeps the ship sturdy."
+ grappling_hooks_inv: "Grappling Hooks"
+ grappling_hooks_inv_desc: "I am tired of writing descriptions."
+ ship_command_inv_1: "Ship Captains"
+ ship_command_inv_1_desc: "With a strong chain of command, the rest of the crew will fall into place and make corrdination easier."
+ archimedes_claw_inv: "Claw of Archimedes"
+ archimedes_claw_inv_desc: "The Claw of Archimedes was an ancient weapon devised by Archimedes to defend the seaward portion of Syracuse's city wall against amphibious assault. Although its exact nature is unclear, the accounts of ancient historians seem to describe it as a sort of crane equipped with a grappling hook that was able to drop and partly submerge an attacking ship down into the water, then either cause the ship to capsize or suddenly let it go altogether. It was dropped onto enemy ships, which would then swing on to defensive forces and destroy them."
+
+
  #religious
  religious_calendar_inv: "Religious Calendar"
  religous_calendar_inv_desc: "Calendars have been used for millennia, but the integration of religious holy days was a vital part of ancient culture."
@@ -847,8 +905,16 @@ grain_laws_rom: "Leges Frumentariae"
  religious_wisdom_inv_3_desc: "God is dead"
  divine_equality_inv: "Divine Equality"
  divine_equality_inv_desc: "Equality under the divine has come in many forms, but usually disregarded foreigners. Mohism was one of the first philosophies to preach universal love--ai--that was reserved for all mankind. If our religion adopts this idea, change is likely to come from within."
+ religious_wisdom_inv_5: "State Sponsored Religion"
 
 
-
+ latin_agriculture_inv: "De Re Rustica"
+ greek_agriculture_inv: "Theophrastus"
+ hindu_agriculture_inv: "Ayurveda"
+ chinese_agriculture_inv: "Herbal Pharmasceuticals"
+ latin_agriculture_inv__desc: ""
+ greek_agriculture_inv__desc: ""
+ hindu_agriculture_inv__desc: ""
+ chinese_agriculture_inv__desc: ""
 
 
